fix-align items.

--- a/style.css
+++ b/style.css
@@ -3,21 +3,25 @@
     padding: 0;
 }
 
-:root {
-    font-style: 'Open Sans';
+body {
+    background-size: cover;
+    background-color: #F5F4F0;
+    font: "Open Sans, serif";
 }
 
-p {
-    font-size: 16px;
-    font-weight: bold;
+main {
+    padding: 80px;
+    align-items: center;
+    font-family: serif;
+
 }
 
-h1 {
-    font-size: 36px;
-    font-weight: bold;
+img {
+    border-radius: 28px;
+    width: 100%;
 }
 
-h2 {
-    font-size: 32px;
-    font-weight: bold;
+footer {
+    text-align: center;
+    padding-bottom: 48px;
 }
